@@ -1,3 +1,6 @@
+2017/04/29 v140
+    1. Fix the change of the smooth delay of healthbar and powerbar.
+
 2017/03/30 v139
     1. Fix for 7.2.0.
 
